--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -3,22 +3,22 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <RootNamespace>Reductech.Templates.EDRConnector</RootNamespace>
-    <AssemblyName>Reductech.Templates.EDRConnector</AssemblyName>
+    <RootNamespace>Reductech.EDR.Connectors.StructuredData</RootNamespace>
+    <AssemblyName>Reductech.EDR.Connectors.StructuredData</AssemblyName>
     <Nullable>enable</Nullable>
     <Version>0.1.0$(VersionSuffix)</Version>
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Reductech.Templates.EDRConnector</PackageId>
-    <Title>EDR Connector Project Template</Title>
-    <Description>A class library for using application X in EDR Sequences</Description>
+    <PackageId>Reductech.EDR.Connectors.StructuredData</PackageId>
+    <Title>EDR StructuredData Connector</Title>
+    <Description>A class library for using StructuredData in EDR Sequences</Description>
     <Product>EDR</Product>
     <PackageTags>ediscovery;forensics;edrm;automation;orchestration</PackageTags>
 
-    <PackageProjectUrl>https://gitlab.com/reductech/templates/edr-connector</PackageProjectUrl>
-    <RepositoryUrl>https://gitlab.com/reductech/templates/edr-connector</RepositoryUrl>
-    <PackageReleaseNotes>Please see https://gitlab.com/reductech/templates/edr-connector/-/releases</PackageReleaseNotes>
+    <PackageProjectUrl>https://gitlab.com/reductech/edr/connectors/structureddata</PackageProjectUrl>
+    <RepositoryUrl>https://gitlab.com/reductech/edr/connectors/structureddata</RepositoryUrl>
+    <PackageReleaseNotes>Please see https://gitlab.com/reductech/edr/connectors/structureddata/-/releases</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 
     <Authors>Reductech</Authors>
