--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Reductech.EDR.Connectors.StructuredData</RootNamespace>
     <AssemblyName>Reductech.EDR.Connectors.StructuredData</AssemblyName>
     <Nullable>enable</Nullable>
-    <Version>0.1.0$(VersionSuffix)</Version>
+    <Version>0.9.0$(VersionSuffix)</Version>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -27,7 +27,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Reductech.EDR.Core" Version="0.4.0" />
+    <PackageReference Include="CsvHelper" Version="19.0.0" />
+    <PackageReference Include="Reductech.EDR.Core" Version="0.9.0-a.master.2104221023" />
   </ItemGroup>
 
 </Project>
