--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup>
     <PackageId>Reductech.EDR.Connectors.StructuredData</PackageId>
-    <Title>EDR StructuredData Connector</Title>
-    <Description>A class library for using StructuredData in EDR Sequences</Description>
+    <Title>EDR Structured Data Connector</Title>
+    <Description>A class library for using structured data - csv, concordance, json - in EDR Sequences</Description>
     <Product>EDR</Product>
     <PackageTags>ediscovery;forensics;edrm;automation;orchestration</PackageTags>
 
@@ -31,7 +31,20 @@
     <PackageReference Include="Reductech.EDR.Core" Version="0.9.0-a.master.2105121639">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
-    
   </ItemGroup>
+
+  <PropertyGroup Condition="$(PackConnector) != ''">
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
+
+  <Target Name="AddConnectorDependencies"
+          BeforeTargets="GenerateNuspec"
+          Condition="$(PackConnector) != ''">
+    <ItemGroup>
+      <_PackageFiles
+        Include="@(RuntimeCopyLocalItems)"
+        PackagePath="$(BuildOutputTargetFolder)/$(TargetFramework)/%(Filename)%(Extension)" />
+    </ItemGroup>
+  </Target>
 
 </Project>
