Generate documentation xml on build

--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <RootNamespace>Reductech.EDR.Connectors.StructuredData</RootNamespace>
     <AssemblyName>Reductech.EDR.Connectors.StructuredData</AssemblyName>
     <Nullable>enable</Nullable>
@@ -44,12 +45,6 @@
       <_PackageFiles
         Include="@(RuntimeCopyLocalItems)"
         PackagePath="$(BuildOutputTargetFolder)/$(TargetFramework)/%(Filename)%(Extension)" />
-    </ItemGroup>
-  </Target>
-
-  <Target Name="_ResolveCopyLocalNuGetPackagePdbsAndXml" Condition="$(CopyLocalLockFileAssemblies) == true" AfterTargets="ResolveReferences">
-    <ItemGroup>
-      <ReferenceCopyLocalPaths Include="@(ReferenceCopyLocalPaths->'%(RootDir)%(Directory)%(Filename).xml')" Condition="'%(ReferenceCopyLocalPaths.NuGetPackageId)' != '' and Exists('%(RootDir)%(Directory)%(Filename).xml')" />
     </ItemGroup>
   </Target>
 
