--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -29,7 +29,6 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.1" />
-    <PackageReference Include="JsonSchema.Net" Version="1.11.3" />
     <PackageReference Include="Reductech.EDR.Core" Version="0.11.0">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
@@ -42,27 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Errors\ErrorStructuredData-EN.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ErrorStructuredData-EN.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Logging\LogMessages-EN.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>LogMessages-EN.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Errors\ErrorStructuredData-EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ErrorStructuredData-EN.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Logging\LogMessages-EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>LogMessages-EN.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <Folder Include="Singer\" />
   </ItemGroup>
 
   <PropertyGroup Condition="$(PackConnector) != ''">
