Update to use newer version of Core

--- a/StructuredData.Tests/StructuredData.Tests.csproj
+++ b/StructuredData.Tests/StructuredData.Tests.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\core\Core.TestHarness\Core.TestHarness.csproj" />
     <ProjectReference Include="..\StructuredData\StructuredData.csproj" />
   </ItemGroup>
 
