--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -4,26 +4,26 @@
     <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <RootNamespace>Reductech.Sequence.Connectors.StructuredData</RootNamespace>
-    <AssemblyName>Reductech.Sequence.Connectors.StructuredData</AssemblyName>
+    <RootNamespace>Sequence.Connectors.StructuredData</RootNamespace>
+    <AssemblyName>Sequence.Connectors.StructuredData</AssemblyName>
     <Nullable>enable</Nullable>
     <Version>0.18.0$(VersionSuffix)</Version>
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Reductech.Sequence.Connectors.StructuredData</PackageId>
+    <PackageId>Sequence.Connectors.StructuredData</PackageId>
     <Title>Sequence® Structured Data Connector</Title>
     <Description>Sequence® connector for automating workflows that use structured data formats - csv, concordance, json.</Description>
     <Product>Sequence®</Product>
     <PackageTags>ediscovery;forensics;edrm;automation;orchestration;sequence;structureddata;csv;json;concordance;idx;</PackageTags>
 
     <PackageProjectUrl>https://sequence.sh</PackageProjectUrl>
-    <RepositoryUrl>https://gitlab.com/reductech/sequence/connectors/structureddata.git</RepositoryUrl>
-    <PackageReleaseNotes>https://gitlab.com/reductech/sequence/connectors/structureddata/-/blob/main/CHANGELOG.md</PackageReleaseNotes>
+    <RepositoryUrl>https://gitlab.com/sequence/connectors/structureddata.git</RepositoryUrl>
+    <PackageReleaseNotes>https://gitlab.com/sequence/connectors/structureddata/-/blob/main/CHANGELOG.md</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
-    <Authors>Reductech</Authors>
+    <Authors>MarkWainwright;antonyoni</Authors>
     <Company>Reductech</Company>
     <Copyright>Copyright (c) 2022 Reductech Ltd</Copyright>
   </PropertyGroup>
@@ -54,7 +54,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Reductech.Sequence.Core" Version="0.18.0-a.main.2211070211">
+    <PackageReference Include="Sequence.Core" Version="0.18.0-a.main.2211102318">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="SharpYaml" Version="2.1.0" />
