--- a/StructuredData/StructuredData.csproj
+++ b/StructuredData/StructuredData.csproj
@@ -12,8 +12,8 @@
 
   <PropertyGroup>
     <PackageId>Sequence.Connectors.StructuredData</PackageId>
-    <Title>Sequence® Structured Data Connector</Title>
-    <Description>Sequence® connector for automating workflows that use structured data formats - csv, concordance, json.</Description>
+    <Title>Sequence Structured Data Connector</Title>
+    <Description>Sequence connector for automating workflows that use structured data formats - csv, concordance, json.</Description>
     <Product>Sequence®</Product>
     <PackageTags>ediscovery;forensics;edrm;automation;orchestration;sequence;structureddata;csv;json;concordance;idx;</PackageTags>
 
